Support creating schedules with labs and tutorials, reorganize packages (#10)
* Add support for adding labs and tutorials

* Update tests with labs and tutorials

* Fix comment in main

* Split server package into database and schedules

* Create databaes_test.go

* Remove print used for debugging

* Update Dockerfile to use new path to DB

* Rename api.yaml to api.yml

* Run coverage for circleci

* Fix failing TestValidCourses

* Add lecture_only query to schedules endpoint

* Update api

* Modify Makefile to point to api.yml instead of api.yaml

* Update README, api.yaml to api.yml
